Corrección del menu nav

--- a/source/pug/pages/tema_3.pug
+++ b/source/pug/pages/tema_3.pug
@@ -1,7 +1,7 @@
 .container#page-tema-3
     
     .header-ecored.text-dark
-        h1 3. Estrategias Operativas
+        h1 3. Estrategias Operativas.
 
     .jumbotron.bg-white 
 
