--- a/source/pug/includes/page-home_indice_tematico.pug
+++ b/source/pug/includes/page-home_indice_tematico.pug
@@ -11,5 +11,7 @@ h2 Desarrollo de <br>contenidos
 
                 ul.list-group.list-group-flush.list.my-n3.nav-temas
                     +navTemaItem('play', 'Introducción', 'main.html#page/introduccion/')
-                    +navTemaItem('1', 'Componentes', 'main.html#page/componentes-bs/')
-                    +navTemaItem('question', 'Actividad didáctica', 'main.html#page/actividad-1/')
+                    +navTemaItem('1', 'Responsabilidades y Deberes que genera la Política de Participación Social en Salud.', 'main.html#page/componentes-bs/')
+                    +navTemaItem('2', 'Mecanismos y espacios de participación.', 'main.html#page/Mecanismos/')
+                    +navTemaItem('3', 'Estrategias Operativas.', 'main.html#page/Estrategias/')
+                    
