--- a/source/pug/pages/tema_2.pug
+++ b/source/pug/pages/tema_2.pug
@@ -1,7 +1,7 @@
 .container#page-tema-2
     
     .header-ecored.text-dark
-        h1 2. Mecanismos y espacios de participación
+        h1 2. Mecanismos y espacios de participación.
 
     .jumbotron.bg-white 
          .row.justify-content-center.align-items-center
