Corrección del row. en el tema 1

--- a/source/pug/pages/tema_1.pug
+++ b/source/pug/pages/tema_1.pug
@@ -44,7 +44,7 @@
          p Teniendo en cuenta en cuenta las responsabilidades generales, a continuación, se exponen algunas responsabilidades específicas que genera la política en diferentes instancias (departamental, municipal, EPS e IPS) dentro del sistema de salud en el marco de sus competencias:  
 
          .jumbotron.bg-b
-            .row.justify-content-center.align-middle
+            .row.justify-content-center.align-items-center
                 .col-auto
                     img(src="assets/images/pages/tema-2/icon-2.svg", style="max-width: 120px").img-fluid
                 .col-9.justify-content-center.align-items-center
