--- a/source/pug/pages/3-tema.pug
+++ b/source/pug/pages/3-tema.pug
@@ -13,8 +13,8 @@
             .col-12.col-md-4 
                 img.img-a(src="assets/images/pages/tema-4/img_01.svg").img-fluid
             
-        .header-arrow.my-5
-            h3.text-center Estrategia Educativa
+        .sub-teme.mt-5
+            h3 Estrategia Educativa
         p Para servidores públicos, actores del sistema y la ciudadanía, sus formas, mecanismos y organizaciones. La educación es una herramienta para alcanzar equidad en la medida en que cualifica a los sujetos y esto les permite apropiar capitales culturales que los posiciona de maneras distintas de comprensión y diálogo. Esta estrategia debe garantizar:
                          
         .list.mt-5
@@ -46,8 +46,8 @@
                 p Generar condiciones para lograr tanto en la ciudadanía como en los servidores del sector salud, competencias, 
                         | conocimientos y apertura hacia la participación. 
                     
-        .header-arrow.my-5
-            h3.text-center Estrategia de comunicación
+        .sub-teme.mt-5
+            h3 Estrategia de comunicación
         p Busca articular a todos los actores y componentes del sistema bajo una perspectiva de acción comunicativa. Esta estrategia es fundamental para el desarrollo de los procesos de participación en la medida en que posibilita la interacción Estado – ciudadanía, a través del acceso a información y de la definición de los mecanismos de producción, circulación y apropiación de esta.       
 
         p En tal sentido, la estrategia deberá generar:    
@@ -93,8 +93,8 @@
             .list__txt    
                 p Canales de comunicación abiertos y de doble vía que faciliten la interacción entre Estado – sociedad civil. 
 
-        .header-arrow.my-5
-            h3.text-center Estrategia de gestión                
+        .sub-teme.mt-5
+            h3 Estrategia de gestión                
         p Se refiere a la instalación de todas las condiciones operativas, logísticas y de arreglos o acuerdos institucionales que se requieran para la implementación de la Política. En tal sentido, esta estrategia deberá:
 
         .list.mt-5
