Ajuste texto e integración articulate

--- a/source/pug/pages/introduccion.pug
+++ b/source/pug/pages/introduccion.pug
@@ -6,23 +6,23 @@
 
     .jumbotron.bg-white 
 
-        p Con el fin de fortalecer el ejercicio de la participación en la toma de decisiones en la gestión del sector salud, se abordarán los siguientes temas de la política de participación social en salud: El alcance de la política, el objetivo general, objetivos específicos, mapa de actores y responsabilidad y estrategias operativas para la implementación de la política.
+        p Con el fin de fortalecer el ejercicio de la participación en la toma de decisiones en la gestión del sector salud, se abordarán los siguientes temas de la Política de Participación Social en Salud: el alcance de la política, el objetivo general, objetivos específicos, mapa de actores y responsabilidad y estrategias operativas para la implementación de la política. 
        
         img.img-a.mt-5(src="assets/images/pages/tema-1/img_01.svg", alt="").img-fluid
                 
         .sub-ecored.mt-5
             h3 Aspectos de la Política de Participación Social en Salud
 
-        p El alcance de la Política de Participación Social en Salud parte del reconocimiento de la participación como derecho fundamental vinculado a otro derecho fundamental como lo es la salud. En tal sentido, el Estado es garante de estos y la ciudadanía tiene el deber de co-construir la salud. Esta Política sienta las bases para el cumplimiento del derecho a la participación en el marco de la Ley 1438 de 2011 y la Ley Estatutaria en Salud 1751 de 2015 por medio de la cual se regula el derecho fundamental a la salud uy se dictan otras disposiciones y que cobija a todo el territorio nacional y a todos los actores del Sistema de Salud. Ministerio de Salud y Protección Social (9 de junio de 2017) Política de Participación Social en Salud [Resolución 2063 de 2017] DO: 50.263
+        p El alcance de la Política de Participación Social en Salud parte del reconocimiento de la participación como derecho fundamental vinculado a otro derecho fundamental como lo es la salud. En tal sentido, el Estado es garante de estos y la ciudadanía tiene el deber de co-construir la salud. Esta política sienta las bases para el cumplimiento del derecho a la participación en el marco de la Ley 1438 de 2011 y la Ley Estatutaria en Salud 1751 de 2015 por medio de la cual se regula el derecho fundamental a la salud y se dictan otras disposiciones y que cobija a todo el territorio nacional y a todos los actores del Sistema de Salud. Ministerio de Salud y Protección Social (9 de junio de 2017) Política de Participación Social en Salud [Resolución 2063 de 2017] DO: 50.263. 
 
 
         .row.justify-content-center.align-items-center.card-media-color.py-5.px-5.mt-5
             .col-auto
                 img.img-a(src="assets/images/icons/icon_hand.svg").img-fluid
             .col
-                p.mb-0 El objetivo general de la Política de Participación Social en Salud en adelante (PPSS), es definir y desarrollar las directrices que le permitan al Estado garantizar el derecho a la participación social en salud y su fortalecimiento y a la ciudadanía la apropiación de mecanismos y condiciones para ejercer la participación social en salud en las decisiones para el cumplimiento del derecho fundamental a la salud en el marco de la Ley Estatutaria de Salud y en armonía con la Política de Atención Integral en Salud - PAIS. Ministerio de Salud y Protección Social (9 de junio de 2017) Política de Participación Social en Salud [Resolución 2063 de 2017] DO: 50.263 
+                p.mb-0 El objetivo general de la Política de Participación Social en Salud en adelante (PPSS), es definir y desarrollar las directrices que le permitan al Estado garantizar el derecho a la participación social en salud y su fortalecimiento y a la ciudadanía la apropiación de mecanismos y condiciones para ejercer la participación social en salud en las decisiones para el cumplimiento del derecho fundamental a la salud en el marco de la Ley Estatutaria de Salud y en armonía con la Política de Atención Integral en Salud - PAIS. Ministerio de Salud y Protección Social (9 de junio de 2017) Política de Participación Social en Salud [Resolución 2063 de 2017] DO: 50.263. 
 
-        p.mt-5 Los objetivos específicos de la política de participación social, establecida por la resolución 2063 del 2017, son los siguientes:
+        p.mt-5 Los objetivos específicos de la Política de Participación Social en Salud, establecida por la resolución 2063 del 2017, son los siguientes:
 
         img.img-a.my-5(src="assets/images/pages/tema-1/img_02.svg").img-fluid
 
@@ -39,7 +39,7 @@
                 .list__item__number
                     span b
             .list__txt    
-                p Fortalecer la capacidad ciudadana y los recursos de poder para que la ciudadanía intervenga activamente, incida y decida en la definición, formulación de políticas públicas de salud: diseño, ejecución, evaluación y ajuste. 
+                p Fortalecer la capacidad ciudadana y los recursos de poder para que la ciudadanía intervenga activamente, incida y decida en la definición, formulación de políticas públicas de salud: diseño, ejecución, evaluación y ajuste.  
 
         .list
             .list__item
