--- a/source/pug/pages/2-tema.pug
+++ b/source/pug/pages/2-tema.pug
@@ -1,7 +1,7 @@
 .container#page-tema-2
     
     .header-ecored.text-dark
-        h1 3. Mecanismos y espacios de participación.
+        h1 3. Mecanismos y espacios de participación
 
     .jumbotron.bg-white 
         p La Política de Participación Social en Salud establece mecanismos con el propósito de promover el derecho de la participación el Ministerio de Salud y Protección Social, las entidades territoriales, EPS e IPS, se fortalecerán e implementarán escenarios, según el caso, para estimular la participación para el cumplimiento de los objetivos de la PPSS. 
@@ -9,62 +9,8 @@
         .header-arrow.my-5
             h3.text-center En todo caso, las instancias mencionadas deberán cumplir como mínimo con los siguientes criterios, para promover el derecho de la participación en salud:
 
-
-        .jumbotron.mt-5.mx-5
-            .row.justify-content-center.align-items-center
-                .col-auto
-                    img.img-a(src="assets/images/pages/ilustraciones/img1.svg").img-fluid
-                .col    
-                    p.mb-0 Identificar y disponer los canales de comunicación y los medios electrónicos y presenciales para disponer información a la ciudadanía. 
-
-        .jumbotron.mt-5.mx-5
-            .row.justify-content-center.align-items-center
-                .col-auto
-                    img.img-a(src="assets/images/pages/ilustraciones/img2.svg").img-fluid
-                .col    
-                    p.mb-0 Identificar y desarrollar los mecanismos o espacios institucionales para adelantar procesos de discusión, negociación y concertación para analizar y decidir en conjunto con los ciudadanos.
-
-        .jumbotron.mt-5.mx-5
-            .row.justify-content-center.align-items-center
-                .col-auto
-                    img.img-a(src="assets/images/pages/ilustraciones/img3.svg").img-fluid
-                .col    
-                    p.mb-0 Establecer mecanismos para facilitar las veedurías ciudadanas y la participación de grupos sociales y de ciudadanos en el control social a la gestión institucional.
-                
-        .jumbotron.mt-5.mx-5
-            .row.justify-content-center.align-items-center
-                .col-auto
-                    img.img-a(src="assets/images/pages/ilustraciones/img4.svg").img-fluid
-                .col    
-                    p.mb-0 Identificar, por área misional, las iniciativas o temáticas sobre las cuales se pueden hacer ejercicios de participación.
-
-        .jumbotron.mt-5.mx-5
-            .row.justify-content-center.align-items-center
-                .col-auto
-                    img.img-a(src="assets/images/pages/ilustraciones/img5.svg").img-fluid
-                .col    
-                    p.mb-0 Establecer diálogos participativos en las instancias del sector salud como espacios de encuentro entre las autoridades y la comunidad con la finalidad de recoger comentarios en forma directa y presencial.
-
-        .jumbotron.mt-5.mx-5
-            .row.justify-content-center.align-items-center
-                .col-auto
-                    img.img-a(src="assets/images/pages/ilustraciones/img6.svg").img-fluid
-                .col    
-                    p.mb-0 Garantizar el reconocimiento de los representantes elegidos de forma democrática por parte de la ciudadanía para ocupar espacios o escenarios de representación. 
-
-        .jumbotron.mt-5.mx-5
-            .row.justify-content-center.align-items-center
-                .col-auto
-                    img.img-a(src="assets/images/pages/ilustraciones/img7.svg").img-fluid
-                .col    
-                    p.mb-0 Implementar la aplicación de las tecnologías de la información y comunicación para facilitar el acceso a la información y brindar espacios a los ciudadanos para expresar sus opiniones sobre los temas de su interés en salud. 
-
-        .jumbotron.mt-5.mx-5
-            .row.justify-content-center.align-items-center
-                .col-auto
-                    img.img-a(src="assets/images/pages/ilustraciones/img8.svg").img-fluid
-                .col    
-                    p.mb-0 Implementar los diálogos participativos como espacios de encuentro entre las autoridades y la comunidad con la finalidad de recoger comentarios en forma directa y presencial.                                     
+        .embed-responsive.embed-responsive-16by9
+            iframe.embed-responsive-item(width='560', height='315', src='media/01/index.html', frameborder='0', allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture', allowfullscreen='') 
 
         p De acuerdo con los principios orientadores de territorialidad, enfoque de derechos, diversidad, solidaridad, autonomía, equidad, transparencia y corresponsabilidad las entidades territoriales e instituciones del sector, en el marco de sus competencias, deberán generar los espacios de participación que se conformen alrededor de los programas de salud, para que la ciudadanía y las organizaciones participen en procesos de salud pública y control social, entre ellos se encuentran:
 
@@ -72,7 +18,7 @@
             .col-auto
                 img.img-a(src="assets/images/pages/tema-3/icon-1.svg").img-fluid
             .col
-                h3 Los comités de ética hospitalaria]
+                h3 Los comités de ética hospitalaria
 
                 hr.border-color-primary.border-2
 
@@ -82,7 +28,7 @@
             .col-auto
                 img.img-a(src="assets/images/pages/tema-3/icon-2.svg").img-fluid
             .col
-                h3 Asociaciones de pacientes]
+                h3 Asociaciones de pacientes
 
                 hr.border-color-primary.border-2
 
@@ -92,7 +38,7 @@
             .col-auto
                 img.img-a(src="assets/images/pages/tema-3/icon-3.svg").img-fluid
             .col
-                h3 Consejos Territoriales de seguridad social en salud (CTSSS)]
+                h3 Consejos Territoriales de seguridad social en salud (CTSSS)
 
                 hr.border-color-primary.border-2
 
@@ -104,13 +50,13 @@
             .col-auto
                 img.img-a(src="assets/images/pages/tema-3/icon-4.svg").img-fluid
             .col
-                h3 Comités de participación comunitaria (COPACOS)]
+                h3 Comités de participación comunitaria (COPACOS)
 
                 hr.border-color-primary.border-2
 
-                p Es “una agrupación de afiliados del régimen contributivo y subsidiado, del Sistema General de Seguridad Social en Salud, que tienen derecho a utilizar unos servicios de salud, de acuerdo con su sistema de afiliación, que velarán por la calidad del servicio y la defensa del usuario”. Ministerio de Salud (3 de agosto de 1994) Artículo 10 [Capitulo IV]. por el cual se organizan y establecen las modalidades y formas de participación social en la prestación de servicios de salud [Ley 1757 de 1994] DO: 41.477
+                p Se define como un “espacio de concertación entre los diferentes actores sociales y el Estado”. Ministerio de Salud (3 de agosto de 1994) Artículo 7 [Capítulo III]. por el cual se organizan y establecen las modalidades y formas de participación social en la prestación de servicios de salud [Ley 1757 de 1994] DO: 41.477.
 
-                p Por medio de los COPACOS se busca generar espacios de discusión y concertación entre los diferentes representantes del territorio el Estado, representado en el alcalde, las Direcciones Locales de Salud, la gerencia de los Hospitales y las formas organizativas, sociales y comunitarias del territorio municipal.
+                p Por medio de los COPACOS se busca generar espacios de discusión y concertación entre los diferentes representantes del territorio y del Estado, representado en el alcalde, las direcciones locales de salud, la gerencia de los hospitales y las formas organizativas, sociales y comunitarias del territorio municipal.
 
                 p El COPACO es un actor con representación institucional y comunitaria, es un referente del sector en los procesos de planificación y de control social, que gestiona la inclusión de planes, programas y prioridades en salud, participa en la toma de decisiones y en la distribución, seguimiento y evaluación de recursos de acuerdo con las fuentes de financiación.
 
@@ -118,11 +64,11 @@
             .col-auto
                 img.img-a(src="assets/images/pages/tema-3/icon-5.svg").img-fluid
             .col
-                h3 Alianzas o Asociaciones de Usuarios]
+                h3 Alianzas o asociaciones de usuarios
 
                 hr.border-color-primary.border-2
 
-                p Es “una agrupación de afiliados del régimen contributivo y subsidiado, del Sistema General de Seguridad Social en Salud, que tienen derecho a utilizar unos servicios de salud, de acuerdo con su sistema de afiliación, que velarán por la calidad del servicio y la defensa del usuario”. Ministerio de Salud (3 de agosto de 1994) Artículo 10 [Capitulo IV]. por el cual se organizan y establecen las modalidades y formas de participación social en la prestación de servicios de salud [Ley 1757 de 1994] DO: 41.477
+                p Es “una agrupación de afiliados del régimen contributivo y subsidiado, del Sistema General de Seguridad Social en Salud, que tienen derecho a utilizar unos servicios de salud, de acuerdo con su sistema de afiliación, que velarán por la calidad del servicio y la defensa del usuario”. Ministerio de Salud (3 de agosto de 1994) Artículo 10 [Capítulo IV]. por el cual se organizan y establecen las modalidades y formas de participación social en la prestación de servicios de salud [Ley 1757 de 1994] DO: 41.477.
 
                 p Las alianzas o asociaciones, además de ser un canal de comunicación entre los usuarios y las entidades prestadoras de servicios, recogen y hacen seguimiento a las sugerencias, recomendaciones, inquietudes y planes de mejoramiento de los usuarios, referidos a la calidad y oportunidad de los servicios en salud, defendiendo sus necesidades, peticiones y derechos.
 
@@ -134,4 +80,4 @@
 
                 hr.border-color-primary.border-2
 
-                p Son mecanismos democráticos de representación de los ciudadanos o de las organizaciones comunitarias, que permite vigilar la gestión pública de autoridades y entidades estatales o privadas, o de organizaciones no gubernamentales, en aquellos ámbitos, aspectos y niveles en los que total o parcialmente se empleen los recursos públicos.
+                p Las alianzas o asociaciones, además de ser un canal de comunicación entre los usuarios y las entidades prestadoras de servicios, recogen y hacen seguimiento a las sugerencias, recomendaciones, inquietudes y planes de mejoramiento de los usuarios, referidos a la calidad y oportunidad de los servicios en salud, defendiendo sus necesidades, peticiones y derechos.
