--- a/source/pug/pages/3-tema.pug
+++ b/source/pug/pages/3-tema.pug
@@ -15,15 +15,14 @@
             
         .sub-teme.mt-5
             h3 Estrategia Educativa
-        p Para servidores públicos, actores del sistema y la ciudadanía, sus formas, mecanismos y organizaciones. La educación es una herramienta para alcanzar equidad en la medida en que cualifica a los sujetos y esto les permite apropiar capitales culturales que los posiciona de maneras distintas de comprensión y diálogo. Esta estrategia debe garantizar:
+        p Para servidores públicos, actores del sistema y la ciudadanía, sus formas, mecanismos y organizaciones. La educación es una herramienta para alcanzar equidad en la medida en que cualifica a los sujetos y esto les permite apropiarse de capitales culturales que los posiciona de maneras distintas de comprensión y diálogo. Esta estrategia debe garantizar: 
                          
         .list.mt-5
             .list__item
                 .list__item__number
                     span 1
             .list__txt    
-                p Cualificar las capacidades, tanto de los servidores públicos, como de la ciudadanía y sus organizaciones 
-                        | para que la participación sea un instrumento efectivo para la realización del derecho a la salud.
+                p Cualificar las capacidades, tanto de los servidores públicos, como de la ciudadanía y sus organizaciones para que la participación sea un instrumento efectivo para la realización del derecho a la salud.
         .list
             .list__item
                 .list__item__number
@@ -43,12 +42,11 @@
                 .list__item__number
                     span 4
             .list__txt    
-                p Generar condiciones para lograr tanto en la ciudadanía como en los servidores del sector salud, competencias, 
-                        | conocimientos y apertura hacia la participación. 
+                p Generar condiciones para lograr tanto en la ciudadanía como en los servidores del sector salud, competencias, conocimientos y apertura hacia la participación.
                     
         .sub-teme.mt-5
             h3 Estrategia de comunicación
-        p Busca articular a todos los actores y componentes del sistema bajo una perspectiva de acción comunicativa. Esta estrategia es fundamental para el desarrollo de los procesos de participación en la medida en que posibilita la interacción Estado – ciudadanía, a través del acceso a información y de la definición de los mecanismos de producción, circulación y apropiación de esta.       
+        p Busca articular a todos los actores y componentes del sistema bajo una perspectiva de acción comunicativa. Esta estrategia es fundamental para el desarrollo de los procesos de participación en la medida en que posibilita la interacción Estado – ciudadanía, a través del acceso a información y de la definición de los mecanismos de producción, circulación y apropiación de esta.     
 
         p En tal sentido, la estrategia deberá generar:    
 
@@ -95,14 +93,14 @@
 
         .sub-teme.mt-5
             h3 Estrategia de gestión                
-        p Se refiere a la instalación de todas las condiciones operativas, logísticas y de arreglos o acuerdos institucionales que se requieran para la implementación de la Política. En tal sentido, esta estrategia deberá:
+        p Se refiere a la instalación de todas las condiciones operativas, logísticas y de arreglos o acuerdos institucionales que se requieran para la implementación de la política. En tal sentido, esta estrategia deberá:
 
         .list.mt-5
             .list__item
                 .list__item__number
                     span 1
             .list__txt    
-                p Generar mecanismos y dispositivos que permitan al Estado el cumplimiento de su papel de garante del derecho a la participación y la ciudadanía, el desarrollo de sus capacidades para incidir, decidir y exigir a través de su participación el cumplimiento del derecho la salud.
+                p Generar mecanismos y dispositivos que permitan al Estado el cumplimiento de su papel de garante del derecho a la participación y la ciudadanía, el desarrollo de sus capacidades para incidir, decidir y exigir a través de su participación el cumplimiento del derecho a la salud.
                         
         .list
             .list__item
