--- a/source/pug/includes/page-home_resultados.pug
+++ b/source/pug/includes/page-home_resultados.pug
@@ -5,7 +5,9 @@ h2  Resultado de <br>aprendizaje
     .card-body
         ul.bg-color-dark
             li 
-                span Reconocer los principios de la Participación Social en salud como un derecho humano fundamental vinculado con la salud.
+                span Fortalecer las capacidades de los servidores públicos, trabajadores de la salud y ciudadanía para ejercer el derecho a la participación teniendo en cuenta la ley estatutaria.
+            li 
+                span Desarrollar acciones de participación social en salud en el marco del derecho a la salud.
        
 
 
